@@ -1,3 +1,9 @@
+Sat Nov 13 14:24:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.h:
+        * connectors/dds4ccm/tests/PSAT/DDS_PSAT_Connector_T.h:
+          Updated for ccm trait changes
+
 Sat Nov 13 14:04:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
